tests/pos/i5140/J.java
class Animal {}
class Dog extends Animal {}
class J {
  void foo(Animal... animal) {}
}
