tests/neg/explicit-null-varargs-src/J.java
class J {
	void foo(String... ss) {}
}

class Animal {}

class Dog extends Animal {}

class J2 {
	void foo(Animal... animal) {}
}

